--- a/Public/index.html
+++ b/Public/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/Public/style.css">
 </head>
+
 <body>
-  
+<div class="content">
+  <div id="myDIV" class="header">
+    <h2 style="margin:5px">A simple to to list</h2>
+    <input type="text" id="myInput" placeholder="Add a task here">
+    <span onclick="newElement()" class="addBtn">Add</span>
+  </div>
+
+
+  <ul id="myUL">
+    <li>Hit the gym</li>
+    <li class="checked">Pay bills</li>
+    <li>Meet George</li>
+    <li>Buy eggs</li>
+    <li>Read a book</li>
+    <li>Organize office</li>
+  </ul>
+</div>
+<script src="form.js"></script>
+  <footer class="footer">
+    <p>UCI Coding Bootcamp</p>
+    <p><a href="https://github.com/hayleyrob/To-Do-List-App">Github Link to project files</a></p>
+  </footer>
 </body>
+
 </html>
