--- a/Public/index.html
+++ b/Public/index.html
@@ -14,17 +14,11 @@
     <span onclick="newElement()" class="addBtn">Add</span>
   </div>
 
-
   <ul id="myUL">
-    <li>Hit the gym</li>
-    <li class="checked">Pay bills</li>
-    <li>Meet George</li>
-    <li>Buy eggs</li>
-    <li>Read a book</li>
-    <li>Organize office</li>
-  </ul>
+</ul>
 </div>
-<script src="form.js"></script>
+<script src="form.js">
+</script>
   <footer class="footer">
     <p>UCI Coding Bootcamp</p>
     <p><a href="https://github.com/hayleyrob/To-Do-List-App">Github Link to project files</a></p>
