updated to get ready for code

--- a/Public/index.html
+++ b/Public/index.html
@@ -10,15 +10,20 @@
 <div class="content">
   <div id="myDIV" class="header">
     <h2 style="margin:5px">A simple to to list</h2>
-    <input type="text" id="myInput" placeholder="Add a task here">
-    <span onclick="newElement()" class="addBtn">Add</span>
+    <!-- <input type="text" id="myInput" placeholder="Add a task here">
+    <span onclick="newElement()" class="addBtn">Add</span> -->
   </div>
 
-  <ul id="myUL">
+  <form id="to-do-list" method="POST" action=" addactionhere ">
+
+</form>
+
+  <!-- <ul id="myUL">
 </ul>
-</div>
+
 <script src="form.js">
-</script>
+</script> -->
+</div>
   <footer class="footer">
     <p>UCI Coding Bootcamp</p>
     <p><a href="https://github.com/hayleyrob/To-Do-List-App">Github Link to project files</a></p>
