--- a/Public/index.html
+++ b/Public/index.html
@@ -14,14 +14,11 @@
     <span onclick="newElement()" class="addBtn">Add</span> -->
   </div>
 
-  <form id="to-do-list" method="POST" action=" addactionhere ">
+<ul id="List">
 
-</form>
-
-  <!-- <ul id="myUL">
 </ul>
 
-<script src="form.js">
+<!-- <script src="form.js">
 </script> -->
 </div>
   <footer class="footer">
