--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="content">
   <div id="myDIV" class="header">
-    <h2 style="margin:5px">A simple to to list</h2>
+    <h2 style="margin:5px">A simple to do list</h2>
     <!-- <input type="text" id="myInput" placeholder="Add a task here">
     <span onclick="newElement()" class="addBtn">Add</span> -->
   </div>
